--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
     sdk: flutter
   flutter_bloc: ^9.1.0
   get_it: ^8.0.3
+  iconly: ^1.0.1
   shared_preferences: ^2.5.2
 
 dev_dependencies:
@@ -55,7 +56,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
-  #   - images/a_dot_ham.jpeg
+    - assets/icons/
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
   # For details regarding adding assets from package dependencies, see
