--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^9.1.0
+  intl: ^0.18.1
   get_it: ^8.0.3
   iconly: ^1.0.1
   shared_preferences: ^2.5.2
