--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   image_picker: ^1.1.2
   intl: ^0.20.2
   shared_preferences: ^2.5.2
+  file_picker: ^8.0.0+1
+  url_launcher: ^6.3.1
 
 dev_dependencies:
   flutter_lints: ^5.0.0
