--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   shared_preferences: ^2.5.2
   file_picker: ^8.0.0+1
   url_launcher: ^6.3.1
+  awesome_notifications: ^0.10.1
 
 dev_dependencies:
   flutter_lints: ^5.0.0
