--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   file_picker: ^8.0.0+1
   url_launcher: ^6.3.1
   awesome_notifications: ^0.10.1
+  flutter_launcher_icons: "^0.13.1"
 
 dev_dependencies:
   flutter_lints: ^5.0.0
@@ -99,3 +100,10 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/icons/employee-icon.png"
+  android_adaptive_icon:
+    foreground_image: "assets/icons/employee-icon.png"
+    background_color: "#FFFFFF"
